--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -47,7 +47,7 @@
       src="/upside-down-city2.png"
     />
 
-    <div class="features">
+    <!-- <div class="features">
       <div class="item">
         <img alt="" src="https://placeholder.pics/svg/200x200" />
         <h3>4 Keynotes</h3>
@@ -86,7 +86,7 @@
           habitant morbi tristique.
         </p>
       </div>
-    </div>
+    </div> -->
 
     <div class="news mx-auto -mt-6 max-w-md text-center">
       <h2 class="news-title red-followline italic mt-0">News</h2>
@@ -288,7 +288,7 @@
         </article>
       </section>
 
-      <section class="my-8 text-center">
+      <!-- <section class="my-8 text-center">
         <h2 class="schedule-header red-prepostline">
           Schedule
         </h2>
@@ -354,7 +354,7 @@
       </section>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- talks -->
 <section id="submission" class="section sponsor-section fp-auto-height">
