--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -413,7 +413,18 @@
             </a>
           </div>
         </section>
-
+<div class="flex justify-between">
+            <a
+              class="sponsors-link sponsors-link--platinum"
+              href="https://www.scb.co.th"
+              target="_blank"
+            >
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
+              </div>
+            </a>
+          </div>
+        </section>
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             GOLD Sponsors
