--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -244,6 +244,17 @@
             PLATINUM Sponsors
           </h3>
           <div class="flex justify-between">
+            <a class="sponsors-link sponsors-link--platinum"
+              href="https://www.scb.co.th"
+              target="_blank>
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
+              </div>
+            </a>
+          </div>
+        </section>
+
+        <div class="flex justify-between">
             <a
               class="sponsors-link sponsors-link--platinum"
               href="http://www.truedigitalpark.com"
@@ -255,7 +266,7 @@
             </a>
           </div>
         </section>
-
+      
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             GOLD Sponsors
