--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -237,8 +237,6 @@
           </h2>
         </div>
       </section>
-
-
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             PLATINUM Sponsors
@@ -246,7 +244,7 @@
           <div class="flex justify-between">
             <a class="sponsors-link sponsors-link--platinum"
               href="https://www.scb.co.th"
-              target="_blank>
+              target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
               </div>
