--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -453,13 +453,19 @@
             SILVER Sponsors
           </h3>
           <div class="flex justify-between">
-            <a
-              class="sponsors-link sponsors-link--silver"
+            <a class="sponsors-link sponsors-link--silver"
               href="https://www.vizrt.com/contact/vizrt--thailand"
-              target="_blank"
-            >
+              target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
+              </div>
+            </a>
+          </div>
+           <div class="flex justify-between">
+            <a class="sponsors-link sponsors-link--silver"
+              href="https://www.parkerbridge.co.th/"target="_blank">
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/silver-PB.png" />
               </div>
             </a>
           </div>
@@ -470,13 +476,23 @@
             INDIVIDUAL/STARTUPS
           </h3>
           <div class="flex justify-between">
-            <a
-              class="sponsors-link sponsors-link--individual"
+            <a class="sponsors-link sponsors-link--individual"
               href="https://www.intelligent-bytes.com/"
               target="_blank"
             >
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/startup-IB.png" />
+              </div>
+            </a>
+          </div>
+          <div class="flex justify-between">
+            <a
+              class="sponsors-link sponsors-link--individual"
+              href="https://www.prontotools.io/"
+              target="_blank"
+            >
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/Startup-Pronto-Logo.png" />
               </div>
             </a>
           </div>
