--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -249,8 +249,6 @@
                 <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
               </div>
             </a>
-          </div>
-        <div class="flex justify-between">
             <a
               class="sponsors-link sponsors-link--platinum"
               href="http://www.truedigitalpark.com"
@@ -300,6 +298,15 @@
                 <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
               </div>
             </a>
+               <a
+              class="sponsors-link sponsors-link--silver"
+              href="https://www.vizrt.com/contact/vizrt--thailand"
+              target="_blank"
+            >
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/silver-PB.png" />
+              </div>
+            </a>
           </div>
         </section>
 
@@ -308,13 +315,18 @@
             INDIVIDUAL/STARTUPS
           </h3>
           <div class="flex justify-between">
-            <a
-              class="sponsors-link sponsors-link--individual"
+            <a class="sponsors-link sponsors-link--individual"
               href="https://www.intelligent-bytes.com/"
-              target="_blank"
-            >
+              target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/startup-IB.png" />
+              </div>
+            </a>
+              <a class="sponsors-link sponsors-link--individual"
+              href="https://www.prontotools.io/"
+              target="_blank">
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/Startup-Pronto-Logo.png" />
               </div>
             </a>
           </div>
