--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -506,11 +506,16 @@
                 <img alt="" src="/logos-2009/partner-TDPK.png" />
               </div>
             </a>
-            <a
-              class="sponsors-link"
+            <a class="sponsors-link"
+              href="https://salweensolutions.com/"
+              target="_blank">
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/Partner-Salween.png" />
+              </div>
+            </a>
+            <a class="sponsors-link"
               href="https://www.ticketmelon.com"
-              target="_blank"
-            >
+              target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/partner-ticketmelon.png" />
               </div>
