--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -300,7 +300,7 @@
             </a>
                <a
               class="sponsors-link sponsors-link--silver"
-              href="https://www.vizrt.com/contact/vizrt--thailand"
+              href="https://www.parkerbridge.co.th/"
               target="_blank"
             >
               <div class="sponsors-card">
@@ -340,19 +340,23 @@
             <a
               class="sponsors-link sponsors-link--partner"
               href="http://www.truedigitalpark.com"
-              target="_blank"
-            >
+              target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/partner-TDPK.png" />
               </div>
             </a>
-            <a
-              class="sponsors-link"
+            <a class="sponsors-link"
               href="https://www.ticketmelon.com"
-              target="_blank"
-            >
+              target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+              </div>
+            </a>
+              <a class="sponsors-link"
+              href="https://salweensolutions.com"
+              target="_blank">
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/Partner-Salween.png" />
               </div>
             </a>
           </div>
