--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -10,6 +10,15 @@
   <div class="flex justify-between">
     <a
       class="sponsors-link sponsors-link--platinum"
+      href="https://www.scb.co.th/"
+      target="_blank"
+    >
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/plat-SCB.png" width="300" height="300 />
+      </div>
+    </a>
+    <a
+      class="sponsors-link sponsors-link--platinum"
       href="http://www.truedigitalpark.com"
       target="_blank"
     >
