--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -7,14 +7,26 @@
   <h3 class="sponsors-subhead sponsors-subhead--black">
     PLATINUM Sponsors
   </h3>
-  <div class="flex justify-between">
+  <div class="flex justify-between items-center">
     <a
       class="sponsors-link sponsors-link--platinum"
       href="https://www.scb.co.th/"
-      target="_blank"
-    >
+      target="_blank">
       <div class="sponsors-card">
         <img alt="" src="/logos-2009/plat-SCB.png" width="300" height="300 />
+<p>
+  Siam Commercial Bank was established by royal charter on January 30, 
+  1907 as the first Thai bank. During its more than 110 years in business, 
+the Bank has played a leading role in providing the financial services needed in Thailand, 
+developing deep expertise.
+Under the vision to serve as "The Most Admired Bank,” SCB has established a strategic plan called SCB Transformation, 
+designed to dramatically upgrade the Bank's infrastructure and enhance its long-term competitiveness. 
+This transformative plan responds to rapid change in the financial services industry, 
+which is being reshaped by digital technology, regulatory change and new consumer behavior. 
+Following this strategic plan's "Going Upside Down" approach, the Bank will transform its business model and thinking 
+throughout its human resources, work processes, products and technology, 
+enabling breakthrough performance and creating sustainable value for our customers and society.
+</p>
       </div>
     </a>
     <a
