--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -7,7 +7,7 @@
   <h3 class="sponsors-subhead sponsors-subhead--black">
     PLATINUM Sponsors
   </h3>
-  <div class="flex justify-between items-center">
+  <div class="flex justify-between">
     <a
       class="sponsors-link sponsors-link--platinum"
       href="https://www.scb.co.th/"
