--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -66,6 +66,13 @@ enabling breakthrough performance and creating sustainable value for our custome
         <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
       </div>
     </a>
+     <a class="sponsors-link sponsors-link--silver"
+      href="https://www.parkerbridge.co.th/"
+      target="_blank">
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/silver-PB.png" />
+      </div>
+    </a>
   </div>
 </section>
 <section class="sponsors-section">
@@ -80,6 +87,13 @@ enabling breakthrough performance and creating sustainable value for our custome
     >
       <div class="sponsors-card">
         <img alt="" src="/logos-2009/startup-IB.png" />
+      </div>
+    </a>
+    <a class="sponsors-link sponsors-link--individual"
+      href="https://www.prontotools.io/"
+      target="_blank">
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/Startup-Pronto-Logo.png" />
       </div>
     </a>
   </div>
@@ -99,13 +113,18 @@ enabling breakthrough performance and creating sustainable value for our custome
         <img alt="" src="/logos-2009/partner-TDPK.png" />
       </div>
     </a>
-    <a
-      class="sponsors-link sponsors-link--partner"
+    <a class="sponsors-link sponsors-link--partner"
       href="https://www.ticketmelon.com"
-      target="_blank"
-    >
+      target="_blank">
       <div class="sponsors-card">
         <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+      </div>
+    </a>
+    <a class="sponsors-link sponsors-link--partner"
+      href="https://salweensolutions.com/"
+      target="_blank">
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/Partner-Salween.png" />
       </div>
     </a>
   </div>
