--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -13,7 +13,7 @@
       href="https://www.scb.co.th/"
       target="_blank">
       <div class="sponsors-card">
-        <img alt="" src="/logos-2009/plat-SCB.png" width="300" height="300 />
+        <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
 <p>
   Siam Commercial Bank was established by royal charter on January 30, 
   1907 as the first Thai bank. During its more than 110 years in business, 
