--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -16,11 +16,14 @@ type: text
     PLATINUM Sponsors
   </h3>
   <div class="flex justify-between">
-    <a
-      class="sponsors-link sponsors-link--platinum"
-      href="http://www.truedigitalpark.com"
-      target="_blank"
-    >
+    <a class="sponsors-link sponsors-link--platinum"
+      href="https://www.scb.co.th/" target="_blank">
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
+      </div>
+    </a>
+    <a class="sponsors-link sponsors-link--platinum"
+      href="http://www.truedigitalpark.com" target="_blank">
       <div class="sponsors-card">
         <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
       </div>
@@ -44,13 +47,18 @@ type: text
     SILVER Sponsors
   </h3>
   <div class="flex justify-between">
-    <a
-      class="sponsors-link sponsors-link--silver"
+    <a class="sponsors-link sponsors-link--silver"
       href="https://www.vizrt.com/contact/vizrt--thailand"
-      target="_blank"
-    >
+      target="_blank">
       <div class="sponsors-card">
         <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
+      </div>
+    </a>
+    <a class="sponsors-link sponsors-link--silver"
+      href="https://www.parkerbridge.co.th"
+      target="_blank">
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/silver-PB.png" />
       </div>
     </a>
   </div>
@@ -60,13 +68,16 @@ type: text
     INDIVIDUAL/STARTUPS
   </h3>
   <div class="flex justify-between">
-    <a
-      class="sponsors-link sponsors-link--individual"
-      href="https://www.intelligent-bytes.com/"
-      target="_blank"
-    >
+    <a class="sponsors-link sponsors-link--individual"
+      href="https://www.intelligent-bytes.com/" target="_blank">
       <div class="sponsors-card">
         <img alt="" src="/logos-2009/startup-IB.png" />
+      </div>
+    </a>
+    <a class="sponsors-link sponsors-link--individual"
+      href="https://www.prontotools.io" target="_blank">
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/Startup-Pronto-Logo.png" />
       </div>
     </a>
   </div>
@@ -86,13 +97,18 @@ type: text
         <img alt="" src="/logos-2009/partner-TDPK.png" />
       </div>
     </a>
-    <a
-      class="sponsors-link sponsors-link--partner"
+    <a class="sponsors-link sponsors-link--partner"
       href="https://www.ticketmelon.com"
-      target="_blank"
-    >
+      target="_blank">
       <div class="sponsors-card">
         <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+      </div>
+    </a>
+    <a class="sponsors-link sponsors-link--partner"
+      href="https://salweensolutions.com"
+      target="_blank">
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/Partner-Salween.png" />
       </div>
     </a>
   </div>
