Fix sponsors card EN

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -348,15 +348,15 @@
             <h3 class="sponsors-subhead">
               PLATINUM Sponsors
             </h3>
-            <div class="flex justify-around flex-wrap items-center">
+            <div class="sponsors-cards">
               <a class="sponsors-link sponsors-link--platinum" href="https://www.scb.co.th" target="_blank">
                 <div class="sponsors-card">
-                  <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
+                  <img alt="" src="/logos-2009/plat-SCB.png" />
                 </div>
               </a>
               <a class="sponsors-link sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
                 <div class="sponsors-card">
-                  <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
+                  <img alt="" src="/logos-2009/partner-TDPK.png" />
                 </div>
               </a>
             </div>
@@ -365,18 +365,18 @@
             <h3 class="sponsors-subhead">
               GOLD Sponsors
             </h3>
-            <!-- <div class="flex justify-between">
-            <a class="sponsors-link">
+            <!-- <div class="sponsors-cards">
+            <a class="sponsors-link sponsors-link--gold">
               <div class="sponsors-card">
                 <img alt="" src="https://placeholder.pics/svg/200" />
               </div>
             </a>
-            <a class="sponsors-link">
+                 <a class="sponsors-link sponsors-link--gold">
               <div class="sponsors-card">
                 <img alt="" src="https://placeholder.pics/svg/200" />
               </div>
             </a>
-            <a class="sponsors-link" href="">
+                 <a class="sponsors-link sponsors-link--gold" href="">
               <div class="sponsors-card">
                 <img alt="" src="https://placeholder.pics/svg/200" />
               </div>
@@ -389,7 +389,7 @@
               SILVER Sponsors
             </h3>
 
-            <div class="flex justify-between">
+            <div class="sponsors-cards">
               <a class="sponsors-link sponsors-link--silver" href="https://www.vizrt.com/contact/vizrt--thailand" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
@@ -407,7 +407,7 @@
             <h3 class="sponsors-subhead">
               INDIVIDUAL/STARTUPS
             </h3>
-            <div class="flex justify-between">
+            <div class="sponsors-cards">
               <a class="sponsors-link sponsors-link--individual" href="https://www.intelligent-bytes.com/" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/startup-IB.png" />
@@ -425,18 +425,18 @@
             <h3 class="sponsors-subhead">
               PARTNERS
             </h3>
-            <div class="flex justify-between items-center">
+            <div class="sponsors-cards">
               <a class="sponsors-link sponsors-link--partner" href="http://www.truedigitalpark.com" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/partner-TDPK.png" />
                 </div>
               </a>
-              <a class="sponsors-link" href="https://salweensolutions.com/" target="_blank">
+              <a class="sponsors-link sponsors-link--partner" href="https://salweensolutions.com/" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/Partner-Salween.png" />
                 </div>
               </a>
-              <a class="sponsors-link" href="https://www.ticketmelon.com" target="_blank">
+              <a class="sponsors-link sponsors-link--partner" href="https://www.ticketmelon.com" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/partner-ticketmelon.png" />
                 </div>
