--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -283,7 +283,7 @@
           <h3 class="sponsors-subhead">
             PLATINUM Sponsors
           </h3>
-          <div class="flex justify-between">
+          <div class="sponsors-cards">
             <a class="sponsors-link sponsors-link--platinum"
               href="https://www.scb.co.th"
               target="_blank">
@@ -307,18 +307,18 @@
           <h3 class="sponsors-subhead">
             GOLD Sponsors
           </h3>
-          <!-- <div class="flex justify-between">
-            <a class="sponsors-link">
+          <!-- <div class="sponsors-cards">
+            <a class="sponsors-link sponsors-link--gold">
               <div class="sponsors-card">
                 <img alt="" src="https://placeholder.pics/svg/200" />
               </div>
             </a>
-            <a class="sponsors-link">
+               <a class="sponsors-link sponsors-link--gold">
               <div class="sponsors-card">
                 <img alt="" src="https://placeholder.pics/svg/200" />
               </div>
             </a>
-            <a class="sponsors-link" href="">
+               <a class="sponsors-link sponsors-link--gold" href="">
               <div class="sponsors-card">
                 <img alt="" src="https://placeholder.pics/svg/200" />
               </div>
@@ -330,13 +330,13 @@
           <h3 class="sponsors-subhead">
             SILVER Sponsors
           </h3>
-          <div class="flex justify-between">
+          <div class="sponsors-cards">
             <a
               class="sponsors-link sponsors-link--silver"
               href="https://www.vizrt.com/contact/vizrt--thailand"
               target="_blank"
             >
-              <div class="sponsors-card">
+                <div class="sponsors-card">
                 <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
               </div>
             </a>
@@ -356,7 +356,7 @@
           <h3 class="sponsors-subhead">
             INDIVIDUAL/STARTUPS
           </h3>
-          <div class="flex justify-between">
+          <div class="sponsors-cards">
             <a class="sponsors-link sponsors-link--individual"
               href="https://www.intelligent-bytes.com/"
               target="_blank">
@@ -378,7 +378,7 @@
           <h3 class="sponsors-subhead">
             PARTNERS
           </h3>
-          <div class="flex justify-between items-center">
+          <div class="sponsors-cards">
             <a
               class="sponsors-link sponsors-link--partner"
               href="http://www.truedigitalpark.com"
@@ -387,14 +387,14 @@
                 <img alt="" src="/logos-2009/partner-TDPK.png" />
               </div>
             </a>
-            <a class="sponsors-link"
+            <a class="sponsors-link sponsors-link--partner"
               href="https://www.ticketmelon.com"
               target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/partner-ticketmelon.png" />
               </div>
             </a>
-              <a class="sponsors-link"
+            <a class="sponsors-link sponsors-link--partner"
               href="https://salweensolutions.com"
               target="_blank">
               <div class="sponsors-card">
