Fix sponsors page to accomodate descriptions

--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -1,165 +1,222 @@
+---
+type: micro
+---
+
 <p>
-  We want to thank these sponsors for making PyCon possible! Their funds help to
-  subsidize tickets and make the event a success all round.
+  We want to thank these sponsors for making PyCon possible! Their funds help to subsidize tickets and make the event a success all round.
 </p>
 
 <section class="sponsors-section">
   <h3 class="sponsors-subhead sponsors-subhead--black">
     PLATINUM Sponsors
   </h3>
-  <div class="flex justify-between">
-    <a
-      class="sponsors-link sponsors-link--platinum"
-      href="https://www.scb.co.th/"
-      target="_blank">
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
+  <div class="sponsors-cards">
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--platinum" href="https://www.scb.co.th/" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
+          </div>
+        </a>
       </div>
-<!--<p>
-  Siam Commercial Bank was established by royal charter on January 30, 
-  1907 as the first Thai bank. During its more than 110 years in business, 
-the Bank has played a leading role in providing the financial services needed in Thailand, 
-developing deep expertise.
-Under the vision to serve as "The Most Admired Bank,” SCB has established a strategic plan called SCB Transformation, 
-designed to dramatically upgrade the Bank's infrastructure and enhance its long-term competitiveness. 
-This transformative plan responds to rapid change in the financial services industry, 
-which is being reshaped by digital technology, regulatory change and new consumer behavior. 
-Following this strategic plan's "Going Upside Down" approach, the Bank will transform its business model and thinking 
-throughout its human resources, work processes, products and technology, 
-enabling breakthrough performance and creating sustainable value for our customers and society.
-</p>-->
-    </a>
-    <a
-      class="sponsors-link sponsors-link--platinum"
-      href="http://www.truedigitalpark.com"
-      target="_blank"
-    >
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
+      <div class="sponsors-card-wrap__right ">
+        <p>
+          Siam Commercial Bank was established by royal charter on January 30, 1907 as the first Thai bank. During its more than 110 years
+          in business, the Bank has played a leading role in providing the financial services needed in Thailand, developing deep expertise.
+        </p>
+        <p>
+          Under the vision to serve as "The Most Admired Bank,” SCB has established a strategic plan called SCB Transformation, designed to
+          dramatically upgrade the Bank's infrastructure and enhance its long-term competitiveness. This transformative plan responds to
+          rapid change in the financial services industry, which is being reshaped by digital technology, regulatory change and new consumer
+          behavior. Following this strategic plan's "Going Upside Down" approach, the Bank will transform its business model and thinking
+          throughout its human resources, work processes, products and technology, enabling breakthrough performance and creating
+          sustainable value for our customers and society.
+        </p>
       </div>
-    </a>
+    </div>
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
+          </div>
+        </a>
+      </div>
+      <div class="sponsors-card-wrap__right">
+        <p>
+          <!-- company description -->
+        </p>
+      </div>
+    </div>
   </div>
 </section>
 <section class="sponsors-section">
   <h3 class="sponsors-subhead sponsors-subhead--black">
     GOLD Sponsors
   </h3>
-  <!-- <div class="flex justify-between">
-          <a class="sponsors-link sponsors-link--gold">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-        </div> -->
+
+  <!-- <div class="sponsors-cards"> -->
+  <!-- <div class="sponsors-card-wrap"> -->
+  <!-- <div class="sponsors-card-wrap__left"> -->
+  <!-- <a class="sponsors-link--gold" href="https://www.vizrt.com/contact/vizrt--thailand" target="_blank"> -->
+  <!-- <div class="sponsors-card"> -->
+  <!-- <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" /> -->
+  <!-- </div> -->
+  <!-- </a> -->
+  <!-- </div> -->
+  <!-- <div class="sponsors-card-wrap__right"> -->
+  <!-- <p> -->
+  <!-- company description -->
+  <!-- </p> -->
+  <!-- </div> -->
+  <!-- </div> -->
+  <!-- </div> -->
 </section>
 <section class="sponsors-section">
   <h3 class="sponsors-subhead sponsors-subhead--black">
     SILVER Sponsors
   </h3>
-  <div class="flex justify-between">
-    <a
-      class="sponsors-link sponsors-link--silver"
-      href="https://www.vizrt.com/contact/vizrt--thailand"
-      target="_blank"
-    >
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
+
+  <div class="sponsors-cards">
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--silver" href="https://www.vizrt.com/contact/vizrt--thailand" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
+          </div>
+        </a>
       </div>
-    </a>
-     <a class="sponsors-link sponsors-link--silver"
-      href="https://www.parkerbridge.co.th/"
-      target="_blank">
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/silver-PB.png" />
+      <div class="sponsors-card-wrap__right">
+        <p>
+          <!-- company description -->
+        </p>
       </div>
-    </a>
+    </div>
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--silver" href="https://www.parkerbridge.co.th/" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/silver-PB.png" />
+          </div>
+        </a>
+      </div>
+      <div class="sponsors-card-wrap__right">
+        <p>
+          <!-- company description -->
+        </p>
+      </div>
+    </div>
   </div>
 </section>
 <section class="sponsors-section">
   <h3 class="sponsors-subhead sponsors-subhead--black">
     INDIVIDUAL/STARTUPS
   </h3>
-  <div class="flex justify-between">
-    <a
-      class="sponsors-link sponsors-link--individual"
-      href="https://www.intelligent-bytes.com/"
-      target="_blank"
-    >
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/startup-IB.png" />
+  <div class="sponsors-cards">
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--individual" href="https://www.intelligent-bytes.com/" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/startup-IB.png" />
+          </div>
+        </a>
       </div>
-    </a>
-    <a class="sponsors-link sponsors-link--individual"
-      href="https://www.prontotools.io/"
-      target="_blank">
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/Startup-Pronto-Logo.png" />
+      <div class="sponsors-card-wrap__right">
+        <p>
+          <!-- company description -->
+        </p>
       </div>
-    </a>
+    </div>
+
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--individual" href="https://www.prontotools.io/" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/Startup-Pronto-Logo.png" />
+          </div>
+        </a>
+      </div>
+      <div class="sponsors-card-wrap__right">
+        <p>
+          <!-- company description -->
+        </p>
+      </div>
+    </div>
   </div>
 </section>
+
 <section class="sponsors-section">
   <h3 class="sponsors-subhead sponsors-subhead--black">
     PARTNERS
   </h3>
 
-  <div class="flex justify-between items-center">
-    <a
-      class="sponsors-link sponsors-link--partner"
-      href="http://www.truedigitalpark.com"
-      target="_blank"
-    >
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/partner-TDPK.png" />
+  <div class="sponsors-cards">
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--partner" href="http://www.truedigitalpark.com" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/partner-TDPK.png" />
+          </div>
+        </a>
       </div>
-    </a>
-    <a class="sponsors-link sponsors-link--partner"
-      href="https://www.ticketmelon.com"
-      target="_blank">
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+      <div class="sponsors-card-wrap__right">
+        <p>
+          <!-- company description -->
+        </p>
       </div>
-    </a>
-    <a class="sponsors-link sponsors-link--partner"
-      href="https://salweensolutions.com/"
-      target="_blank">
-      <div class="sponsors-card">
-        <img alt="" src="/logos-2009/Partner-Salween.png" />
+    </div>
+
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--partner" href="https://www.ticketmelon.com" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+          </div>
+        </a>
       </div>
-    </a>
+      <div class="sponsors-card-wrap__right">
+        <p>
+          <!-- company description -->
+        </p>
+      </div>
+    </div>
+    <div class="sponsors-card-wrap">
+      <div class="sponsors-card-wrap__left">
+        <a class="sponsors-link--partner" href="https://salweensolutions.com/" target="_blank">
+          <div class="sponsors-card">
+            <img alt="" src="/logos-2009/Partner-Salween.png" />
+          </div>
+        </a>
+      </div>
+      <div class="sponsors-card-wrap__right">
+        <p>
+          <!-- company description -->
+        </p>
+      </div>
+    </div>
   </div>
 </section>
 
 <p>
-  Pycon Thailand is organised by a community of passionate Pythonistas on a
-  volunteer-basis. We can't put on a great show without some great sponsors.
-  Here is your chance to reach the decision makers and developers from hundreds
-  of top companies.
+  Pycon Thailand is organised by a community of passionate Pythonistas on a volunteer-basis. We can't put on a great show without some great
+  sponsors. Here is your chance to reach the decision makers and developers from hundreds of top companies.
 </p>
 <p>
-  Pycon Thailand has a capacity of over 400 attendees and there are sponsorship
-  opportunities to fit any budget. Be part of the one and only international
-  Python conference in Thailand!
+  Pycon Thailand has a capacity of over 400 attendees and there are sponsorship opportunities to fit any budget. Be part of the one and only
+  international Python conference in Thailand!
 </p>
 <h3>
   Sponsorship packages
 </h3>
 
 <p>
-  Contact the organizers for the available sponsorship opportunities.
-  Opportunities include representation the website, booths at the venue, banners
-  at the venue, as well as sessions, swag and bag inserts.
+  Contact the organizers for the available sponsorship opportunities. Opportunities include representation the website, booths at the venue,
+  banners at the venue, as well as sessions, swag and bag inserts.
 </p>
 
-<a
-  class="btn btn-primary btn-lg active"
-  href="https://th.pycon.org/Pycon%20prospectusv6.pdf"
-  >Download Prospectus</a
->
+<a class="btn btn-primary btn-lg active" href="https://th.pycon.org/Pycon%20prospectusv6.pdf">Download Prospectus</a>
 
 <p>
   If your company is interested in sponsoring Python in Thailand email us:
-  <a class="underline text-red" href="mailto:sponsorship@pyconthailand.org"
-    >sponsorship@pyconthailand.org
-  </a>
+  <a class="underline text-red" href="mailto:sponsorship@pyconthailand.org">sponsorship@pyconthailand.org </a>
 </p>
