--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -242,73 +242,100 @@
         </article>
       </section>
 
-      <!-- <section class="my-8 text-center">
-        <h2 class="schedule-header red-prepostline">
-          Schedule
-        </h2>
-        <div class="schedule-row">
-          <div class="schedule-left">
-            <div class="circle"></div>
-            <div class="line"></div>
+      <section class="my-8 text-center">
+          <h2 class="schedule-header red-prepostline">
+            Schedule
+          </h2>
+          <div class="schedule-row">
+            <div class="schedule-left">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+            <div class="schedule-right">
+              <h2 class="h2">Day 1.0 - Saturday 15/06/19</h2>
+              <p>
+                We start off the day with morning coffee provided to register your attendance, 
+                meetup and get to know what is install for you. Presentation will kick off with a brief intro from our host, 
+                our team and one of our keynote speakers, follow up with 3 tracks of talks and workshops for you to choose.
+                Lunch provided around noon in a light and relaxed mood.
+              </p>
+            </div>
           </div>
-          <div class="schedule-right">
-            <h2 class="h2">Saturday 24/11 Conference</h2>
-            <p>
-              Ac felis donec et odio pellentesque diam volutpat commodo sed
-              egestas egestas fringilla phasellus faucibus scelerisque eleifend
-              donec pretium vulputate sapien. Et, sollicitudin ac orci phasellus
-              egestas tellus rutrum tellus.
-            </p>
+          <div class="schedule-row">
+            <div class="schedule-left">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+            <div class="schedule-right">
+              <h2 class="h2">Day 1.1 - Afternoon session</h2>
+              <p>
+                Continue with a marathon of various exciting Python related topics to indulge in. 
+                Choose the topic that you prefer. Take advantage of this great networking event to know more people, 
+                gain more knowledge, and widen your horizon. Conference closes with some lightning talk and another 
+                keynote speaker in the evening around 5-6pm.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="schedule-row">
-          <div class="schedule-left">
-            <div class="circle"></div>
-            <div class="line"></div>
+          <div class="schedule-row">
+            <div class="schedule-left">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+            <div class="schedule-right">
+              <h2 class="h2">Day 1.2 - Epic party</h2>
+              <p>
+                Not to be missed! Great opportunity to wind down after a day full of inspiring presentations and 
+                knowledge exchange. Get together in a relaxed and upbeat environment with drinks and food provided as 
+                you continue to interact, exchange and extend your discussions with speakers, sponsors, and other attendees.  
+              </p>
+            </div>
           </div>
-          <div class="schedule-right">
-            <h2 class="h2">Saturday</h2>
-            <p>
-              Ac felis donec et odio pellentesque diam volutpat commodo sed
-              egestas egestas fringilla phasellus faucibus scelerisque eleifend
-              donec pretium vulputate sapien. Et, sollicitudin ac orci phasellus
-              egestas tellus rutrum tellus.
-            </p>
+         <div class="schedule-row">
+            <div class="schedule-left">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+            <div class="schedule-right">
+              <h2 class="h2">Day 2.0 - Sunday 16/06/19</h2>
+              <p>
+                Start off the day light and easy with a cup of morning coffee with compliments from us to boost your 
+                energy. Day 2 kicks off with another keynote speaker in a state-of-the-art venue packed with motivated 
+                talks and workshops delivered by a carefully selected line up of local and international speakers. 
+                Take a break and have a lunch reboost.
+              </p>
+            </div>
+         </div>
+         <div class="schedule-row">
+            <div class="schedule-left">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div> 
+            <div class="schedule-right">
+                <h2 class="h2">Day 2.1 - Afternoon</h2>
+                <p>
+                Don’t pass on the chance to learn or improve your knowledge on a subject that could provide you with 
+                a competitive edge. Take advantage of an extended and diversified list of talks and workshops. 
+                Access to these programs exclusively reserved for you. 
+                </p>
+            </div>
           </div>
-        </div>
-        <div class="schedule-row">
-          <div class="schedule-left">
-            <div class="circle"></div>
-            <div class="line"></div>
+          <div class="schedule-row">
+            <div class="schedule-left">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div> 
+            <div class="schedule-right">
+                <h2 class="h2">Day 2.2 - Closing</h2>
+                <p>
+                We wrap off the 2 day conference with our final keynote speaker, We gather our sponsors, partners, 
+                team and you as we  advance our community effort to the next level for Pycon in Thailand.
+                </p>
+            </div>
           </div>
-          <div class="schedule-right">
-            <h2 class="h2">Saturday</h2>
-            <p>
-              Ac felis donec et odio pellentesque diam volutpat commodo sed
-              egestas egestas fringilla phasellus faucibus scelerisque eleifend
-              donec pretium vulputate sapien. Et, sollicitudin ac orci phasellus
-              egestas tellus rutrum tellus.
-            </p>
-          </div>
-        </div>
-        <div class="schedule-row">
-          <div class="schedule-left">
-            <div class="circle"></div>
-          </div>
-          <div class="schedule-right">
-            <h2 class="h2">Saturday</h2>
-            <p>
-              Ac felis donec et odio pellentesque diam volutpat commodo sed
-              egestas egestas fringilla phasellus faucibus scelerisque eleifend
-              donec pretium vulputate sapien. Et, sollicitudin ac orci phasellus
-              egestas tellus rutrum tellus.
-            </p>
-          </div>
-        </div>
-      </section>
-    </div> -->
+        </section>
+      </div>
+      </div>
     </div>
-  </div>
 
   <!-- talks -->
   <section id="submission" class="section sponsor-section fp-auto-height">
