--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -243,7 +243,7 @@
       </section>
 
       <section class="my-8 text-center">
-          <h2 class="schedule-header red-prepostline">
+          <h2 class="countdown-title red-prepostline font-bold">
             Schedule
           </h2>
           <div class="schedule-row">
