--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -244,7 +244,7 @@
 
       <section class="my-8 text-center">
           <h2 class="countdown-title red-prepostline font-bold">
-            Schedule
+            SCHEDULE
           </h2>
           <div class="schedule-row">
             <div class="schedule-left">
